fix(interface): fix dto
