# src/app/contracts/dto/accounting-entity.dto.ts
@@ -1,0 +1,9 @@
+import { IAccountingEntity } from '../../../domain/accounting/types/accounting.types';
+
+export interface IAccountingEntityRes extends Omit<
+  IAccountingEntity,
+  'functionalCurrency' | 'reportingCurrency'
+> {
+  functionalCurrency: string;
+  reportingCurrency: string;
+}
